# vestacrystparser

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api.html  api_convert.html  api_export.html  api_parser.html  api_utilities.html  contributing.html  file_format.html  file_format.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html  vestafile.html
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  python-package.yml  sphinx.yml
_sources/: api.rst.txt  api_export.rst.txt  api_parser.rst.txt  api_utilities.rst.txt  file_format.md.txt  usage.rst.txt  vestafile.rst.txt
docs/: requirements.txt
docs/source/: api.rst  api_convert.rst  api_parser.rst  conf.py  contributing.rst  file_format.md  index.rst  usage.rst  vestafile.rst
tests/: Cu_primitive_plain.vesta  conftest.py  test.py  test_convert.py  test_convert_hbond.py  test_convert_volumetric.py  test_export.py  test_integration.py  test_parser.py  test_parser_phases.py  test_parser_vectors.py  test_utilities.py  test_volumetric.py  utils.py
tests/data/: CBaMnBr4_sq.vasp  CBaMnBr4_sq.vesta  CHGCAR_PbSe.vesta  CHGCAR_PbSe_div.vesta  DTO_template.vesta  POSCAR_hBN.vasp  hBN.vesta  lk_elf_after.vesta  lk_elf_before.vesta  two_phase.vesta
vestacrystparser/: convert.py  export.py  parser.py  utilities.py  vesta-parser.py
